--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,6 +2,9 @@ name: Cypress e2e Tests
 on: 
   # push: []
   workflow_dispatch:
+    inputs:
+      spec: 
+        default: cypress/e2e/*
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -33,6 +36,7 @@ jobs:
           # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
           parallel: true # Runs test in parallel using settings above
+          spec: ${{ github.event.inputs.spec }}
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
